# kio_recentfolders

./: .gitignore  BalooQueryRecentFolders.cpp  BalooQueryRecentFolders.h  CMakeLists.txt  Messages.sh  NepomukQueryRecentFolders.cpp  NepomukQueryRecentFolders.h  NepomukTimelineViewer.cpp  NepomukTimelineViewer.h  README.md  RecentFolders.cpp  kio_recentfolders.cpp  kio_recentfolders.h  recentfolders.protocol
po/: kio_recentfolders.pot
po/ru/: kio_recentfolders.po
